[package]
name = "mpc_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.34.1"
rand = "0.9.2"
rerun = "0.25.1"
# anyhow = {version = "1", features = ["backtrace"]}
# rclrs = "*"
# std_msgs = "*"

[[bin]]
name="mpc"
path="src/mpc.rs"

[[bin]]
name="mpc_ros2_node"
path="src/mpc_ros2_node.rs"
